--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
           sudo mkdir /srv/cache-overlay /srv/cache-work
           sudo mount -t overlay overlay -o lowerdir=/srv/cache,upperdir=/srv/cache-overlay,workdir=/srv/cache-work /srv/cache
           ls -l /srv/cache
+          mkdir ~/.ptxdist
+          echo 'PTXCONF_SETUP_SRCDIR="/srv/cache/src"' >> ~/.ptxdist/ptxdistrc-git
+          cp ~/.ptxdist/ptxdistrc-git ~/.ptxdist/ptxdistrc-2010.01
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup
