--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,3 +92,9 @@ jobs:
           path: platform-*/images/update.raucb
           compression-level: 0
           retention-days: 30
+      - name: Upload Log
+        uses: actions/upload-artifact@v4
+        if: ${{ failure() }}
+        with:
+          name: logfile-${{ matrix.platform }}
+          path: platform-*/logfile
